bug: 18352 Aligned import/export buttons.
http://bugzilla.zimbra.com/show_bug.cgi?id=18352

Copied from Perforce
 Change: 67594

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -2154,6 +2154,10 @@ HTML>BODY .appt-selected .appt_allday_body
 	@Text-disabled@		/* TODO: Text-hint ? */
 }
 
+.ZOptionsInfo .ZOptionsLabel {
+	width: 100px;
+}
+
 /* REVISIT: Why do disabled inputs have a fixed height of 20px? */
 .ZOptionsField INPUT[disabled],
 .ZOptionsTableRow INPUT[disabled] {
